<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pegawai.AddPegawaiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/green_500"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:paddingBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="630dp"
                android:background="@drawable/ic_rectangel_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="NIK"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLength="16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="number"
                android:layout_margin="12dp"/>

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nik"
                android:inputType="textCapSentences"
                android:layout_margin="12dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_nama"
                android:layout_margin="12dp"/>

            <RelativeLayout
                android:id="@+id/rl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                android:layout_margin="12dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageView
                    android:id="@+id/btn_show_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons_show_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/et_asal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_password"
                android:layout_margin="12dp"
                android:inputType="textCapSentences"/>

            <EditText
                android:id="@+id/et_tanggal_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lahir"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_asal"
                android:layout_margin="12dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"/>

            <Spinner
                android:id="@+id/sp_agama"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_tanggal_lahir"
                android:layout_margin="12dp"
                android:spinnerMode="dropdown"
                android:prompt="@string/agama"
                android:entries="@array/agama"/>

            <Spinner
                android:id="@+id/sp_kelamin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_agama"
                android:layout_margin="12dp"
                android:spinnerMode="dropdown"
                android:prompt="@string/jenis_kelamin"
                android:entries="@array/kelamin"
                />

            <Spinner
                android:id="@+id/sp_jabatan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_kelamin"
                android:layout_margin="12dp"
                android:spinnerMode="dropdown"
                android:prompt="@string/jabatan"
                android:entries="@array/jabatan"/>

            <TextView
                android:id="@+id/hak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_jabatan"
                android:layout_margin="12dp"/>

            <Switch
                android:id="@+id/sw_admin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_jabatan"
                android:layout_margin="12dp"/>

            <Button
                android:id="@+id/btn_pilih_foto"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/pilih_foto"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hak"
                android:layout_margin="12dp"/>

            <ImageView
                android:id="@+id/info_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons_done"
                app:layout_constraintStart_toEndOf="@id/btn_pilih_foto"
                app:layout_constraintTop_toBottomOf="@id/hak"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/tv_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/btn_pilih_foto"
                app:layout_constraintTop_toBottomOf="@id/hak"
                android:text="Foto tidak terbaca, mohon coba kembali"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"/>

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/simpan"
                android:textColor="@color/black"
                android:backgroundTint="@color/yellow_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v1"
                android:layout_margin="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>