<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NIK"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_nik_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv0"/>

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_email_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_pegawai"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_nama_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nik_pegawai"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvemail"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_alamat_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_pegawai"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_tanggal_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alamat_pegawai"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agama"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_agama_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_pegawai"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv4"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_kelamin_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_agama_pegawai"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jabatan"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv5"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_jabatan_pegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kelamin_pegawai"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>